--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -62,7 +62,7 @@ code {
 .footer {
   margin-top: 100px;
   color: white;
-  background-color: black;
+  background-color: rgb(17, 17, 20);
   z-index: -1;
   position: sticky;
 }
