--- a/src/index.css
+++ b/src/index.css
@@ -64,10 +64,9 @@ code {
   background-color: black;
 }
 
-.footer {
-  margin-top: 100px;
-  color: white;
-  background-color: rgb(17, 17, 20);
-  z-index: -1;
-  position: sticky;
+@media screen and (min-width: 800px) {
+  .picture {
+    left: 0;
+    margin-left: 20px;
+  }
 }
